# coros_mcp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: chatgpt-codex.example.toml  hermes-mcp.example.json  hermes-mcp.example.yaml
docs/superpowers/plans/: 2026-07-15-coros-mcp-implementation.md
docs/superpowers/specs/: 2026-07-15-coros-mcp-design.md
scripts/: cleanup_workouts.py  smoke_live.py
src/coros_mcp/: auth.py  client.py  config.py  errors.py  models.py  normalize.py  pace.py  server.py  sports.py  strength.py  workouts.py
tests/: conftest.py  test_auth.py  test_client_response.py  test_config.py  test_errors.py  test_normalize.py  test_pace.py  test_sports.py  test_strength.py  test_tool_calendar.py  test_tool_library.py  test_tool_metrics.py  test_workouts.py
